--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>영화 검색</title>
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     <h1>영화 검색</h1>
 
+    <div id="movies-container" class="movies-container"></div>
+
+    <button id="prev-button" disabled>이전</button>
+    <button id="next-button">다음</button>
     <script src="./js/app.js" type="module"></script>
   </body>
 </html>
