--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>영화 검색</title>
     <link rel="stylesheet" href="./css/main.css" />
+    <link rel="icon" href="./favicon.png" type="image/png">
   </head>
   <body>
     <h1>영화 검색</h1>
