design : pagination css 적용

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
 
     <div id="pagination-container" class="pagination-container">
-      <button id="prev-button">이전</button>
+      <button id="prev-button">&laquo;</button>
       <div id="page-list"></div>
-      <button id="next-button">다음</button>
+      <button id="next-button">&raquo;</button>
     </div>
 
     <script src="./js/app.js" type="module"></script>
