feat : 영화 제목 검색 기능 추가

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <form id="title-search-form">
       <input
       type="text"
-      id="movie-title-input"
+      id="title-search-input"
         placeholder="영화 제목을 입력하세요"
         required
         />
-        <button type="submit">검색</button>
+        <button type="submit" id="search-button">검색</button>
       </form>
       <div id="total-result"></div>
     <div id="movies-container" class="movies-container">
