--- a/search.html
+++ b/search.html
@@ -6,5 +6,23 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/main.css" />
   </head>
-  <body></body>
+  <body>
+    <form id="title-search-form">
+      <input
+        type="text"
+        id="title-search-input"
+        placeholder="영화 제목을 입력하세요"
+      />
+      <button type="submit" id="search-button">검색</button>
+    </form>
+    <div id="movies-container" class="movies-container">
+      <div id="loading-icon"></div>
+    </div>
+    <div id="pagination-container" class="pagination-container">
+      <button id="prev-button">&laquo;</button>
+      <div id="page-list"></div>
+      <button id="next-button">&raquo;</button>
+    </div>
+    <script src="./js/app.js" type="module"></script>
+  </body>
 </html>
