feat : 영화 디테일 모달 추가

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       type="text"
       id="title-search-input"
         placeholder="영화 제목을 입력하세요"
- 
+        autocomplete="off"
         />
         <button type="submit" id="search-button">검색</button>
       </form>
