--- a/myBookmark.html
+++ b/myBookmark.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/main.css" />
-    <title>Document</title>
+    <title>영화 검색</title>
+    <link rel="icon" href="./favicon.png" type="image/png" />
   </head>
   <body>
     <form id="title-search-form">
