--- a/search.html
+++ b/search.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>영화 검색</title>
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="icon" href="./favicon.png" type="image/png" />
   </head>
