--- a/index.html
+++ b/index.html
@@ -8,18 +8,24 @@
     <link rel="icon" href="./favicon.png" type="image/png">
   </head>
   <body>
-    
-    <h1>영화 검색</h1>
-    <form id="title-search-form">
-      <input
-      type="text"
-      id="title-search-input"
-        placeholder="영화 제목을 입력하세요"
-        autocomplete="off"
+    <nav class="navbar">
+      <div>
+        <h1 class="logo" onclick="window.location.href='index.html'">
+          영화 검색
+        </h1>
+        <div onclick="window.location.href='myBookmark.html'">내 북마크</div>
+      </div>
+      <form id="title-search-form">
+        <input
+          type="text"
+          id="title-search-input"
+          placeholder="영화 제목을 입력하세요"
+          autocomplete="off"
         />
         <button type="submit" id="search-button">검색</button>
       </form>
-      <div id="total-result"></div>
+    </nav>
+
     <div id="movies-container" class="movies-container">
       <div id="loading-icon"></div>
     </div>
