design :  전체  css 수정

--- a/search.html
+++ b/search.html
@@ -10,9 +10,7 @@
   <body>
     <nav class="navbar">
       <div>
-        <h1 class="logo" onclick="window.location.href='index.html'">
-          영화 검색
-        </h1>
+        <h1 class="logo" onclick="window.location.href='index.html'">🍿영화</h1>
         <div onclick="window.location.href='myBookmark.html'">내 북마크</div>
       </div>
       <form id="title-search-form">
@@ -26,9 +24,7 @@
       </form>
     </nav>
 
-    <div id="searched-title-container">
-      <div class="searched-title"><span>${searchQuery}</span></div>
-    </div>
+    <div id="searched-title-container"></div>
     <div id="movies-container" class="movies-container">
       <div id="loading-icon"></div>
     </div>
