--- a/myBookmark.html
+++ b/myBookmark.html
@@ -10,9 +10,7 @@
   <body>
     <nav class="navbar">
       <div>
-        <h1 class="logo" onclick="window.location.href='index.html'">
-          영화 검색
-        </h1>
+        <h1 class="logo" onclick="window.location.href='index.html'">🍿영화</h1>
         <div onclick="window.location.href='myBookmark.html'">내 북마크</div>
       </div>
       <form id="title-search-form">
@@ -25,7 +23,7 @@
         <button type="submit" id="search-button">검색</button>
       </form>
     </nav>
-    <div>내 북마크</div>
+    <div class="sub-title">내 북마크</div>
     <div id="movies-container" class="movies-container">
       <div id="loading-icon"></div>
     </div>
